--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -148,7 +148,7 @@
 		</header>
 
 		<img
-			src="../JUSTBIRDCAUSEYOUHATEMYTYPETASTE.png"
+			src="/barcelonasacredharp/JUSTBIRDCAUSEYOUHATEMYTYPETASTE.png"
 			class="overflow-centered"
 		/>
 
